Update .gitignore for MS Visual Studio files
Additional Visual Studio files have been added to the .gitignore. This is to ensure that unnecessary files associated with MS Visual Studio, like solution files and project user preference files, are not tracked by Git. This keeps the repository clean and free of user-specific configurations or build artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 /.cache/
 /cmake-build-debug/
 /out/
+/.vs/
+/findPrimes.sln
+/findPrimes.vcxproj
+/findPrimes.vcxproj.filters
+/findPrimes.vcxproj.user
+/x64/
