--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,4 +34,23 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-
+    - name: Test For trialDivision
+      run: ./build/findPrimes 2147483648 a
+      
+    - name: Test For eratosthenesSieve
+      run: ./build/findPrimes 2147483648 b
+    
+    - name: Test For eulerSieve
+      run: ./build/findPrimes 2147483648 c
+    
+    - name: Test For sundaramSieve
+      run: ./build/findPrimes 2147483648 d
+      
+    - name: Test For atkinSieve
+      run: ./build/findPrimes 2147483648 e
+      
+    - name: Test For incrementalSieve
+      run: ./build/findPrimes 2147483648 f
+    
+    - name: Test For wheelSieve
+      run: ./build/findPrimes 2147483648 g
