--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
-project(findPrimes_multiThread)
+project(findPrimes)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(findPrimes_multiThread src/main.cpp
+add_executable(findPrimes src/main.cpp
         src/includes/main.h
         src/argInput.cpp
         src/includes/argInput.h
@@ -24,7 +24,7 @@ if (CMAKE_BUILD_TYPE STREQUAL "Release")
 endif ()
 
 find_package(Threads REQUIRED)
-target_link_libraries(findPrimes_multiThread Threads::Threads)
+target_link_libraries(findPrimes Threads::Threads)
 
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
