--- a/.github/workflows/cmake-build-release.yml
+++ b/.github/workflows/cmake-build-release.yml
@@ -2,9 +2,9 @@ name: CMake-Release
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "dev" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "dev" ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -47,14 +47,8 @@ jobs:
       - name: Test For sundaramSieve(multithread)
         run: ./build/findPrimes 16 d 99999989 primes.txt
 
-      - name: Test For atkinSieve(multithread)
-        run: ./build/findPrimes 16 e 99999989 primes.txt
-
       - name: Test For incrementalSieve(multithread)
-        run: ./build/findPrimes 16 f 99999989 primes.txt
-
-      - name: Test For wheelSieve(multithread)
-        run: ./build/findPrimes 16 g 99999989 primes.txt
+        run: ./build/findPrimes 16 e 99999989 primes.txt
 
       - name: Test For trialDivision(monothread)
         run: ./build/findPrimes 1 a 99999989 primes.txt
@@ -68,11 +62,6 @@ jobs:
       - name: Test For sundaramSieve(monothread)
         run: ./build/findPrimes 1 d 99999989 primes.txt
 
-      - name: Test For atkinSieve(monothread)
+      - name: Test For incrementalSieve(monothread)
         run: ./build/findPrimes 1 e 99999989 primes.txt
 
-      - name: Test For incrementalSieve(monothread)
-        run: ./build/findPrimes 1 f 99999989 primes.txt
-
-      - name: Test For wheelSieve(monothread)
-        run: ./build/findPrimes 1 g 99999989 primes.txt
