--- a/.github/workflows/cmake-build-release.yml
+++ b/.github/workflows/cmake-build-release.yml
@@ -35,33 +35,33 @@ jobs:
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: ctest -C ${{env.BUILD_TYPE}}
 
-      - name: Test For trialDivision(multithread)
-        run: ./build/findPrimes 16 a 99999989 primes.txt
+#      - name: Test For trialDivision(multithread)
+#        run: ./build/findPrimes 16 0 99999989 primes.txt
 
       - name: Test For eratosthenesSieve(multithread)
-        run: ./build/findPrimes 16 b 99999989 primes.txt
+        run: ./build/findPrimes 16 1 99999989 primes.txt
 
-      - name: Test For eulerSieve(multithread)
-        run: ./build/findPrimes 16 c 99999989 primes.txt
+#      - name: Test For eulerSieve(multithread)
+#        run: ./build/findPrimes 16 2 99999989 primes.txt
 
       - name: Test For sundaramSieve(multithread)
-        run: ./build/findPrimes 16 d 99999989 primes.txt
+        run: ./build/findPrimes 16 3 99999989 primes.txt
 
-      - name: Test For incrementalSieve(multithread)
-        run: ./build/findPrimes 16 e 99999989 primes.txt
+#      - name: Test For incrementalSieve(multithread)
+#        run: ./build/findPrimes 16 4 99999989 primes.txt
 
       - name: Test For trialDivision(monothread)
-        run: ./build/findPrimes 1 a 99999989 primes.txt
+        run: ./build/findPrimes 1 0 99999989 primes.txt
 
       - name: Test For eratosthenesSieve(monothread)
-        run: ./build/findPrimes 1 b 99999989 primes.txt
+        run: ./build/findPrimes 1 1 99999989 primes.txt
 
       - name: Test For eulerSieve(monothread)
-        run: ./build/findPrimes 1 c 99999989 primes.txt
+        run: ./build/findPrimes 1 2 99999989 primes.txt
 
       - name: Test For sundaramSieve(monothread)
-        run: ./build/findPrimes 1 d 99999989 primes.txt
+        run: ./build/findPrimes 1 3 99999989 primes.txt
 
       - name: Test For incrementalSieve(monothread)
-        run: ./build/findPrimes 1 e 99999989 primes.txt
+        run: ./build/findPrimes 1 4 99999989 primes.txt
 
