--- a/.github/workflows/cmake-build-release.yml
+++ b/.github/workflows/cmake-build-release.yml
@@ -11,7 +11,7 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build:
+  build-and-test:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -35,20 +35,20 @@ jobs:
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: ctest -C ${{env.BUILD_TYPE}}
 
-#      - name: Test For trialDivision(multithread)
-#        run: ./build/findPrimes 16 0 99999989 primes+TDMT.txt
+      - name: Test For trialDivision(multithread)
+        run: ./build/findPrimes 16 0 99999989 primes+TDMT.txt
 
       - name: Test For eratosthenesSieve(multithread)
         run: ./build/findPrimes 16 1 99999989 primesESMT.txt
 
-#      - name: Test For eulerSieve(multithread)
-#        run: ./build/findPrimes 16 2 99999989 primesEUSMT.txt
+      - name: Test For eulerSieve(multithread)
+        run: ./build/findPrimes 16 2 99999989 primesEUSMT.txt
 
       - name: Test For sundaramSieve(multithread)
         run: ./build/findPrimes 16 3 99999989 primesSSMT.txt
 
-#      - name: Test For incrementalSieve(multithread)
-#        run: ./build/findPrimes 16 4 99999989 primesISMT.txt
+      - name: Test For incrementalSieve(multithread)
+        run: ./build/findPrimes 16 4 99999989 primesISMT.txt
 
       - name: Test For trialDivision(monothread)
         run: ./build/findPrimes 1 0 99999989 primesTD.txt
